objects/Internal_Contact__c.object
<CustomObject>
    <description>This object will allow Customer Care to add in Genesys contacts as case contacts.</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>This field will track the case to which this interested party is tied to.</description>
        <inlineHelpText>This field will track the case to which this interested party is tied to.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Internal_Interested_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Interested_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold the contact record of the internal interested party.</description>
        <inlineHelpText>This field will hold the contact record of the internal interested party.</inlineHelpText>
        <label>Interested Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Is_Designated_Contact__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Please choose an internal Genesys employee contact. Designated contacts are filtered out of this look up dialog.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Internal Contacts</relationshipLabel>
        <relationshipName>Internal_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Internal Contact</label>
    <nameField>
        <displayFormat>IC-{00000000}</displayFormat>
        <label>Internal Contacts</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>